[package]
name = "connection_blocker"
version = "0.1.0"
authors = ["Sorridi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iptables = { git = "https://github.com/Sorridi/rust-iptables", rev = "8c0b1c2"}
chrono = "0.4"